--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
 
       // Pole s definovanými polohami v čase
       var dynamicLocations = [
-        { start_time: "2024-08-28 06:27:00", cords: [50.0855, 14.4378] },
-        { start_time: "2024-08-28 06:35:00", cords: [50.0905, 14.448] },
-        { start_time: "2024-08-28 06:40:00", cords: [50.0955, 14.459] },
+        { start_time: "2024-08-28 06:27:00", cords: [50.0205583, 15.7867314] },
+        { start_time: "2024-08-28 09:00:00", cords: [50.0205583, 15.7867314] },
+        
+
         // Přidejte další body podle potřeby
       ];
 
