--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
       // Vytvoření mapy
-      var map = L.map("map").setView([50.0755, 14.4378], 13); // Centrováno na Prahu jako výchozí pozice
+      var map = L.map("map").setView([50.0205583, 15.7867314], 13); // Centrováno na Prahu jako výchozí pozice
 
       // Přidání vrstev
       L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
