--- a/index.html
+++ b/index.html
@@ -22,8 +22,42 @@
     <script>
       // Pole s definovanými polohami v čase
       var dynamicLocations = [
-        { start_time: "2024-08-28 06:27:00", cords: [50.0205583, 15.7867314] },
-        { start_time: "2024-08-28 09:00:00", cords: [50.0205583, 15.7867314] },
+        { start_time: "2024-08-28 06:27:00", cords: [50.0206, 15.7868] },
+        { start_time: "2024-08-28 09:00:00", cords: [50.0205, 15.7867] },
+        { start_time: "2024-08-28 09:15:00", cords: [50.0206, 15.7866] },
+        { start_time: "2024-08-28 09:30:00", cords: [50.0204, 15.7868] },
+        { start_time: "2024-08-28 09:45:00", cords: [50.0205, 15.7867] },
+        { start_time: "2024-08-28 10:00:00", cords: [50.0205, 15.7867] },
+        { start_time: "2024-08-28 10:15:00", cords: [50.0206, 15.7866] },
+        { start_time: "2024-08-28 10:30:00", cords: [50.0204, 15.7868] },
+        { start_time: "2024-08-28 10:45:00", cords: [50.0205, 15.7867] },
+        { start_time: "2024-08-28 11:00:00", cords: [50.0205, 15.7867] },
+        { start_time: "2024-08-28 11:15:00", cords: [50.0206, 15.7866] },
+        { start_time: "2024-08-28 11:30:00", cords: [50.0204, 15.7868] },
+        { start_time: "2024-08-28 11:45:00", cords: [50.0205, 15.7867] },
+        { start_time: "2024-08-28 12:00:00", cords: [50.0205, 15.7867] },
+        { start_time: "2024-08-28 12:15:00", cords: [50.0206, 15.7866] },
+        { start_time: "2024-08-28 12:30:00", cords: [50.0204, 15.7868] },
+        { start_time: "2024-08-28 12:45:00", cords: [50.0205, 15.7867] },
+        // start movement
+        { start_time: "2024-08-28 13:00:00", cords: [50.0204, 15.787] },
+        { start_time: "2024-08-28 13:15:00", cords: [50.0204514, 15.7880806] },
+        { start_time: "2024-08-28 13:30:00", cords: [50.0204136, 15.7889658] },
+        { start_time: "2024-08-28 13:45:00", cords: [50.0207478, 15.7911114] },
+        // start incoming
+        { start_time: "2024-08-28 14:00:00", cords: [50.0214097, 15.7903606] },
+        { start_time: "2024-08-28 14:05:00", cords: [50.0227469, 15.7881503] },
+        { start_time: "2024-08-28 14:10:00", cords: [50.0235603, 15.7864553] },
+        { start_time: "2024-08-28 14:15:00", cords: [50.0228228, 15.7846206] },
+        { start_time: "2024-08-28 14:20:00", cords: [50.0210306, 15.7836014] },
+        { start_time: "2024-08-28 14:25:00", cords: [50.0209133, 15.7823031] },
+        { start_time: "2024-08-28 14:30:00", cords: [50.0209961, 15.7800822] },
+        { start_time: "2024-08-28 14:35:00", cords: [50.0225264, 15.7784086] },
+        { start_time: "2024-08-28 14:40:00", cords: [50.0234225, 15.7775503] },
+        { start_time: "2024-08-28 14:45:00", cords: [50.0233053, 15.7749647] },
+        { start_time: "2024-08-28 14:50:00", cords: [50.0230225, 15.7720786] },
+        { start_time: "2024-08-28 14:55:00", cords: [50.0225333, 15.7714778] },
+        { start_time: "2024-08-28 15:00:00", cords: [50.0220575, 15.7719392] },
 
         // Přidejte další body podle potřeby
       ];
